<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Meiya</string>
    <string name="cn_language">语言</string>
    <string name="cn_product_list">产品目录</string>
    <string name="cn_new_product_list">新产品</string>
    <string name="cn_threed_product_list">3D展示</string>
    <string name="cn_company_profile">公司介绍</string>
    <string name="cn_contact_information">联系方式</string>
    <string name="cn_favorites">收藏夹</string>
    <string name="cn_product_certificate">产品证书</string>

    <string name="en_language">LANGUAGE</string>
    <string name="en_product_list">PRODUCTS</string>
    <string name="en_new_product_list">NEW PRODUCTS</string>
    <string name="en_threed_product_list">3D PRODUCTS</string>
    <string name="en_company_profile">COMPANY</string>
    <string name="en_contact_information">CONTACTS</string>
    <string name="en_favorites">FAVORITES</string>
    <string name="en_product_certificate">CERTIFICATES</string>

    <string name="en_back">Back</string>
    <string name="login">Login</string>
    <string name="login_hint">Enter code</string>
    <string name="login_error_hint">Wrong or used code, please try again!</string>
    <string name="no_favorites_hint">Nothing favorites</string>

    <string name="category_title">Categories</string>
    <string name="new_product_title">新产品</string>
    <string name="threeD_product_title">3D展示</string>

    <string name="company_name">Meiya Sanitary Ware Co., Ltd</string>
    <string name="company_introduction">Estalished in 1984, Wenzhou Meiya Sanitary Wares Co., Ltd. is a professional manufacturer and supplier for faucets, bathroom accessories and sanitary cabinet.\n\nMeiya openned up business into international market since 1990s.To keep pace with development, Meiya built new plant in 2007, imported advanced German equipment, strengthened management, expanded investment for research and development and increased production lines to improve production capcity comprehensively. Under the leadership of Mr. Xia and jonit efforts of all staff, Meiya faucet and sanitary wares have been widely spreaded in household and commercial applications worldwide.\n\nAs an export-oriented manufactory, Meiya have been authernticated by Well-known Sanitary Brand in China and ISO9001 International Quality System. Meiya faucet have been certificated by ACS, CE, CUPC, Watermark and other certificates to cater to needs in different market. Besides, Meiya provides OEM serviece as well. Reliable quality, reasonable price and professional service won Meiya a good reputation in Western Europe, Eastern Europe, South America, Middle East and South Africa and etc..</string>
    <string name="product_search_query_hint">输入搜索名称</string>
    <string name="search_text">Search</string>
    <string name="update_text">Update</string>

</resources>

