<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="50dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@mipmap/catalogs_bg"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/product_list"
        android:text="@string/cn_product_list"
        android:textSize="@dimen/main_text_size"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textAlignment="viewStart"
        />

    <TextView
        android:id="@+id/company_profile"
        android:text="@string/cn_company_profile"
        android:textColor="@color/white"
        android:textSize="@dimen/main_text_size"
        android:layout_weight="1"
        android:textAlignment="viewEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/contact_information"
        android:text="@string/cn_contact_information"
        android:textColor="@color/white"
        android:textSize="@dimen/main_text_size"
        android:layout_weight="1"
        android:textAlignment="viewStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/favorites"
        android:text="@string/cn_favorites"
        android:textColor="@color/white"
        android:textSize="@dimen/main_text_size"
        android:layout_weight="1"
        android:textAlignment="viewEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/product_certificate"
        android:text="@string/cn_product_certificate"
        android:textSize="@dimen/main_text_size"
        android:textColor="@color/white"
        android:layout_weight="1"
        android:textAlignment="viewStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
